jorge_andrada/session-01/exercise-03/wordpress-deployment.yaml
# Deployment wordpress

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: exercise-03
  labels:
    app: wordpress
    tier: frontend
    track: stable
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
        - name: wordpress
          image: bitnami/wordpress:4.9.4
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 443
              name: https-port
          livenessProbe:
            httpGet:
              path: /
              port: http-port
            initialDelaySeconds: 60
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http-port
            initialDelaySeconds: 60
            failureThreshold: 3
