jorge_andrada/session-01/exercise-03/rds-svc.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: mariadb-service
  namespace: exercise-03
  labels:
    app: wordpress
    type: database
spec:
  externalName: kubernetes-training.cfxyxg2jnovx.us-east-1.rds.amazonaws.com
  type: ExternalName
