jorge_andrada/session-01/exercise-03/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: exercise-03
  labels:
    app: wordpress
    tier: frontend
spec:
  selector:
    app: wordpress
    tier: frontend
  ports:
  - name: http-sv-port
    port: 80
    targetPort: http-port
  - name: https-sv-port
    port: 443
    targetPort: https-port
  # type: NodePort # Accedemos desde fuera sin ingress
  type: ClusterIP # para ingress
