jorge_andrada/session-01/exercise-03/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: exercise-03
  annotations:
    # nginx.ingress.kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location ^~ /my-custom-admin {return 301 https://wordpress-exercise-03.com/wp-admin/;}
      location ^~ /wp-admin {return 301 https://wordpress-exercise-03.com/404;}
spec:
  tls:
  - secretName: tls-secret
    hosts:
    - wordpress-exercise-03.com
  rules:
  - host: wordpress-exercise-03.com
    http:
      paths:
        - path: /
          backend:
            serviceName: wordpress-service
            servicePort: http-sv-port
